--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -11,6 +11,6 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requiremnts.txt
+          pip install -r requirements.txt
       - name: Test with Pytest
         run: pytest -vv 
